Update text. Fix horizontal scrolling

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,10 +2,14 @@
 url('https://fonts.googleapis.com/css?family=Calibri&display=swap');
 
 .container {
-    /* display: flex; */
     float: left;
-    padding: 0px; 
+    padding: 0px;
     height: 900px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -ms-overflow-x: auto;
+    -ms-overflow-y: hidden;
+    overflow:hidden;
 }
 
 .container.tall {
@@ -19,15 +23,12 @@ url('https://fonts.googleapis.com/css?family=Calibri&display=swap');
 .page {
     float:left;
     width:600px;
-    /* overflow:hidden; */
-    /* top:0px;  */
+    overflow:auto;
 }  
 
 .pageMiddle{
   float:left;
   width:1200px;
-  /* overflow:hidden; */
-  /* top:0px;  */
 }  
 
 .info{
@@ -38,6 +39,7 @@ url('https://fonts.googleapis.com/css?family=Calibri&display=swap');
 .infoMiddle{
   position: absolute;
   left: 1250px;
+  overflow:hidden;
 }
 
 .coveredImage{
@@ -100,35 +102,34 @@ a {
     padding-bottom: 0px;
     position:fixed;
     bottom:0;
-    /* top:900px; */
-    width:100%;
   }
 
   .modal-dialog {
     width:100%;
     margin:0;
-    /* opacity:0.5; */
-    /*add what you want here*/
 }
 
 .modal {
   background: transparent;
-  position: fixed;
+  position: absolute;
   top: 20px !important;
   width: 600px;
   left: 605px;
   height: 750px;
 }
 
+.modal-open {
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
 .modal-content{
-  /* background: transparent !important; */
   background: rgba(226, 223, 223, 0.75);
   border: 0px !important;
-  /* height:750px; */
+  word-wrap: break-all;
 }
 
 .modal-header {
-  /* background: rgba(255, 0, 0, 0.25); */
   border: 0px !important;
   height: 50px
 }
@@ -136,26 +137,3 @@ a {
 .modal-backdrop.show {
   opacity: 0.25;
 }
-
-/* .modal-backdrop.in
-{
-    opacity:0.1 !important;
-} */
-
-/* centering styles for jsbin */
-/* html,
-body {
-  width:100%;
-  height:100%;
-}
-html {
-  display:table;
-}
-body {
-  display:table-cell;
-  vertical-align:middle;
-}
-body > .btn {
-  display: block;
-  margin: 0 auto;
-} */
